[package]
name = "illiterate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bpe-thing = { git = "https://github.com/sharp-eyes/bpe-thing", version = "0.1.0" }
cmd-thing = { git = "https://github.com/sharp-eyes/cmd-thing", version = "0.1.0" }
dotenvy = "0.15.7"
log = "0.4.27"
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
